change collect(toList()) to toList()